<resources>
    <string name="app_name">テキストカメラ</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_home">Home</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="title_activity_trim_image">TrimImageActivity</string>
    <string name="title_activity_recognize_result">RecognizeResultActivity</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="activity_mode">ACTIVITY_MODE</string>
    <string name="wifi_title">Wi-Fiパスワード</string>
    <string name="wifi_desc">wifiパスワードを文字認識</string>
    <string name="url_desc">URLを文字認識</string>
    <string name="url_title">URL</string>
    <string name="mail_title">メールアドレス</string>
    <string name="mail_desc">メールアドレスを文字認識</string>
    <string name="tel_title">電話番号</string>
    <string name="tel_desc">電話番号を文字認識</string>
    <string name="instruction_message_rectangle">※四角内に入るように撮影</string>
    <string name="instruction_message_autofocus">※画面タップでフォーカス</string>
    <string name="setting_title">設定</string>
    <string name="resolution_setting_title">解像度の設定</string>
    <string name="finish_setting">設定完了</string>
    <string name="instruction_trimming">トリミングしてください</string>
    <string name="originate_image_button">原画像</string>
    <string name="fix_trimmed_image_button">決定</string>
    <string name="target_image_title">対象の画像</string>
    <string name="recognize_result_title">文字認識結果</string>
    <string name="correct_instruction_message">※誤認識があれば修正してください</string>
    <string name="select_app_title">起動するアプリを選択</string>
    <string name="clear_button">クリア</string>
    <string name="copy_button">コピー</string>
    <string name="wifi_button_name">WIFI設定</string>
    <string name="browser_button_name">ブラウザ</string>
    <string name="mail_button_name">メール</string>
    <string name="phone_button_name">電話</string>
    <string name="on_copy_message">クリップボードにコピーしました。</string>
    <string name="on_url_open_error_message">URLをオープンできませんでした。</string>
    <string name="error_on_mail_address_message">メールアドレスにエラーがありました。</string>
    <string name="error_on_phone_number_message">電話番号にエラーがありました。</string>
    <string name="out_of_memory_message">エラーが発生しました。設定で解像度を下げてください。</string>
</resources>
