<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:id="@+id/layoutResultActivity"
    tools:context="jp.thotta.android.wifipasswordreader.RecognizeResultActivity">



    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/target_image_title"
        android:id="@+id/textViewImageTitle"
        android:background="#ccc"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="5dp"
        android:textSize="24dp" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:id="@+id/imageView"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_below="@+id/textViewImageTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp">
        <requestFocus />
    </ImageView>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/recognize_result_title"
        android:id="@+id/textViewEditTitle"
        android:background="#ccc"
        android:layout_below="@+id/imageView"
        android:textSize="24dp" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:layout_below="@+id/textViewEditTitle"
        android:layout_centerHorizontal="true"
        android:textSize="32dp"
        android:maxHeight="300dp"
        android:text="0123456789012345678" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/correct_instruction_message"
        android:id="@+id/textViewCorrect"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editText" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_app_title"
        android:id="@+id/textViewSelectApp"
        android:background="#ccc"
        android:layout_below="@+id/buttonClearText"
        android:textSize="24dp" />


    <ImageButton
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:src="@mipmap/ic_action_copy"
        android:background="@drawable/layout_button"
        android:id="@+id/buttonCopy"
        android:layout_below="@+id/textViewSelectApp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp" />

    <ImageButton
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:id="@+id/buttonWifiSetting"
        android:layout_alignTop="@+id/buttonCopy"
        android:layout_toRightOf="@+id/buttonCopy"
        android:layout_toEndOf="@+id/buttonCopy"
        android:src="@null"
        android:background="@drawable/layout_button" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear_button"
        android:id="@+id/buttonClearText"
        android:layout_below="@+id/editText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/layout_button"
        android:layout_marginBottom="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/copy_button"
        android:id="@+id/textView2"
        android:layout_below="@+id/buttonWifiSetting"
        android:layout_alignLeft="@+id/buttonCopy"
        android:layout_alignStart="@+id/buttonCopy"
        android:layout_alignRight="@+id/buttonCopy"
        android:layout_alignEnd="@+id/buttonCopy"
        android:gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wifi_button_name"
        android:id="@+id/textViewActivityName"
        android:layout_below="@+id/buttonWifiSetting"
        android:layout_alignLeft="@+id/buttonWifiSetting"
        android:layout_alignStart="@+id/buttonWifiSetting"
        android:layout_alignRight="@+id/buttonWifiSetting"
        android:layout_alignEnd="@+id/buttonWifiSetting"
        android:gravity="center_horizontal" />

</RelativeLayout>
