<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#000"
    tools:context="jp.thotta.android.wifipasswordreader.CameraActivity">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instruction_message_rectangle"
        android:textColor="#fff"
        android:id="@+id/textViewInstruction"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instruction_message_autofocus"
        android:textColor="#fff"
        android:id="@+id/textViewInstruction2"
        android:layout_below="@+id/textViewInstruction"/>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textViewInstruction2"
        android:layout_above="@+id/buttonShutter"
        android:id="@+id/frameLayoutCamera"
        android:layout_marginBottom="10dp">
    </FrameLayout>

    <Button
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/buttonShutter"
        android:background="@drawable/round_button"
        android:layout_alignParentStart="false"
        android:layout_alignParentEnd="false" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting_title"
        android:background="@drawable/layout_button"
        android:id="@+id/buttonSetting"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="false" />
</RelativeLayout>
